--- a/22AprilMaven/test-output/old/Default suite/methods.html
+++ b/22AprilMaven/test-output/old/Default suite/methods.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="909474">  <td>25/04/23 16:27:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.clickOnclickMeTest()[pri:7, instance:tasts.ButtonsTest@5656be13]">clickOnclickMeTest</td> 
+<tr bgcolor="909474">  <td>25/04/25 13:54:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NestedFremesTest.clickonPracticeTest()[pri:2, instance:tasts.NestedFremesTest@55182842]">clickonPracticeTest</td> 
   <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:27:08</td>   <td>-553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.clickOndoubleClickTest()[pri:5, instance:tasts.ButtonsTest@5656be13]">clickOndoubleClickTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:27:07</td>   <td>-1467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.clickOnElementsTest()[pri:3, instance:tasts.ButtonsTest@5656be13]">clickOnElementsTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:27:07</td>   <td>-1305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.clickOnButtonsTest()[pri:4, instance:tasts.ButtonsTest@5656be13]">clickOnButtonsTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:27:09</td>   <td>169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.validateDetailsTest()[pri:8, instance:tasts.ButtonsTest@5656be13]">validateDetailsTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:26:59</td>   <td>-9560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.clickOnCloseTest()[pri:1, instance:tasts.ButtonsTest@5656be13]">clickOnCloseTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:27:08</td>   <td>-340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.clickOnrightClickTest()[pri:6, instance:tasts.ButtonsTest@5656be13]">clickOnrightClickTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:26:52</td>   <td>-16685</td> <td>&nbsp;</td><td title="&gt;&gt;ButtonsTest.launchurlTesta()[pri:0, instance:tasts.ButtonsTest@5656be13]">&gt;&gt;launchurlTesta</td> 
+<tr bgcolor="909474">  <td>25/04/25 13:54:45</td>   <td>-7570</td> <td>&nbsp;</td><td title="&gt;&gt;NestedFremesTest.launchurl()[pri:0, instance:tasts.NestedFremesTest@55182842]">&gt;&gt;launchurl</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="909474">  <td>25/04/23 16:27:04</td>   <td>-4355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonsTest.clickonPracticeTest()[pri:2, instance:tasts.ButtonsTest@5656be13]">clickonPracticeTest</td> 
+<tr bgcolor="909474">  <td>25/04/25 13:54:56</td>   <td>3420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NestedFremesTest.printParentTest()[pri:5, instance:tasts.NestedFremesTest@55182842]">printParentTest</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="909474">  <td>25/04/25 13:54:56</td>   <td>2982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NestedFremesTest.clickonAllertWindowTest()[pri:3, instance:tasts.NestedFremesTest@55182842]">clickonAllertWindowTest</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="909474">  <td>25/04/25 13:54:53</td>   <td>-215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NestedFremesTest.clickonCloseTest()[pri:1, instance:tasts.NestedFremesTest@55182842]">clickonCloseTest</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="909474">  <td>25/04/25 13:54:56</td>   <td>3172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NestedFremesTest.clickOnNestedFrameTest()[pri:4, instance:tasts.NestedFremesTest@55182842]">clickOnNestedFrameTest</td> 
   <td>main@1554547125</td>   <td></td> </tr>
 </table>
